Fix HashMap<K, V>::IsValidKey(key) for K = scoped_retptr<T>

Currently HashMap<K, V>::IsValidKey takes PeekInType. This is causing
a problem when K is a scoped_refptr<T>, because PeekInType for
scoped_refptr<T> is essentially a raw pointer while
KeyTraits::IsDeleted which is called in IsValidKey takes
scoped_refptr<T>, not T*.

Bug: 910033
Change-Id: I60bceb11a3e4f219c40030e0b606d709d4f13cd2
Reviewed-on: https://chromium-review.googlesource.com/c/1351979
Commit-Queue: Yutaka Hirano <yhirano@chromium.org>
Reviewed-by: Yuta Kitamura <yutak@chromium.org>
Cr-Commit-Position: refs/heads/master@{#612595}
Former-commit-id: 82ed9409527a75b631d9a2f9b038097113f3ed8a